<resources>
    <!-- reto de la cadena -->
    <string name="app_name">PEDIDOS EXPRESS</string>
    <string name="nav_bar">BARRA DE NAVEGACIÓN</string>
    <string name="home">HOME</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="ingrese_correo">Ingrese su correo electrónico</string>
    <string name="title">Pedidos Express</string>
    <string name="Logo">Logo 1</string>
    <string name="description">DESCRIPCCION</string>
    <string name="price">PRECIO</string>
    <string name="action_1">Favorito</string>
    <string name="action_2">Agregar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="Username">Nombre de usuario</string>
    <string name="Password">Contraseña</string>
    <string name="Crear_cuenta">¿Crear una cuenta nueva?</string>
    <string name="missingPassword">¿Olvidó su contraseña?</string>
    <string name="inbox_title">Inbox</string>
    <string name="outbox_title">Outbox</string>
    <string name="favourites_title">Favourites</string>
    <string name="mail_subheader_title">Mail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit\n</string>
    <string name="content_description_search">Editar</string>
    <string name="favorite">Favoritos</string>
    <string name="content_description_favorite">Favoritos</string>
    <string name="more">Mas</string>
    <string name="content_description_more">Mas</string>
    <string name="page_title">Pedidos express</string>
    <string name="Email">Correo electronico</string>
    <string name="RecuperarPorEmail">Ingrese su correo electronico</string>
    <string name="searchbar_hint">Encuentra tu producto</string>
    <string name="SeleecionDeDireccionEnTiempo">Seleecionar la direccion actual</string>
    <string name="SelectDireccion">Entregar ahora</string>

    <!-- Recursos adicionales -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="secondary_text">Descripcion</string>
    <string name="supporting_text">Precio</string>
    <string name="content_description_media">Imagen del producto</string>



    <!-- En res/values/strings.xml -->
    <string name="label_pedido_id">ID del Pedido</string>
    <string name="label_nombre_producto">Nombre del Producto</string>
    <string name="label_precio">Precio</string>
    <string name="label_estado">Estado</string>
    <string name="label_nombre_cliente">Nombre del consumidor</string>
    <string name="label_nombre_repartidor">Nombre del repartidor</string>
    <string name="label_total">Total</string>
    <string name="label_productos">Productos</string>
    <string name="DireccionCliente">Direccion de entrega</string>

</resources>
