<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/mail_subheader_title">
        <menu>
            <item
                android:id="@+id/inbox_item"
                android:icon="@drawable/ic_inbox_24px"
                android:title="@string/inbox_title"
                android:checkable="true"/>
            <item
                android:id="@+id/outbox_item"
                android:icon="@drawable/ic_outbox_24px"
                android:title="@string/outbox_title"
                android:checkable="true"/>
            <item
                android:id="@+id/favourites_item"
                android:icon="@drawable/ic_favourites_24px"
                android:title="@string/favourites_title"
                android:checkable="true"/>
        </menu>
    </item>
</menu>