<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.main.RegistrarCuenta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:name=".login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="356dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/logo_1" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Username"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Password"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Email"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emaildEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/createAccountLink"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="createAccount"
                android:padding="8dp"
                android:text="¿Cual sera tu función?"/>
            <RadioGroup
                android:id="@+id/roleRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/checkBoxConsumidor"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"

                    android:text="Soy Consumidor"/>
                <RadioButton
                    android:id="@+id/checkBoxAbarrotes"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="Soy Abarrotero"/>
            </RadioGroup>
            <CheckBox
                android:id="@+id/checkTerminos"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="Acepta los terminos y condiciones"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Registrarse" />

            <TextView
                android:id="@+id/forgotPasswordLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="forgotPassword"
                android:padding="8dp"
                android:text="¿Tienes una cuenta?"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnback"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/title"
                android:src="@drawable/back" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>